# obs-foobar-spotify-overlay

./: .gitignore  BUILD.md  README.md  configurator.html  nowplaying-overlay.html  overlay-server.ps1  serve.bat  spectrum-server.py  stop.bat
Now-Playing-Overlay/: configurator.html  nowplaying-overlay.html  overlay-server.ps1  serve.bat  spectrum-server.py
Now-Playing-Spotify/: nowplaying-spotify.html  overlay-server.ps1
component/: CMakeLists.txt
component/src/: foo_obs_overlay.cpp  server_control.h  settings.cpp  settings.h
component/src/assets/: asset_extract.cpp  asset_extract.h  embedded_assets.h
component/src/audio/: vis_source.cpp  vis_source.h
component/src/dsp/: spectrum_pipeline.cpp  spectrum_pipeline.h
component/src/net/: http_server.cpp  http_server.h  path_guard.cpp  path_guard.h  ws_broadcaster.cpp  ws_broadcaster.h
component/src/player/: now_playing.cpp  now_playing.h
component/src/prefs/: prefs_page.cpp
component/tools/: embed_assets.cmake
launcher/: __init__.py  __main__.py  app.py  audio_devices.py  configurator_host.py  orchestrator.py  settings.py  sources.py  spectrum_shim.py  spotify_auth.py
launcher/resources/: style.qss
packaging/: FoobarOverlay.spec  build.ps1  make_shortcut.ps1  pyi_entry.py  requirements-dev.txt  verify_assets.py
tests/parity/: capture_reference.py  gen_reference_wav.py  oracle_runner.cpp
tests/parity/reference/: reference.jsonl
